--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,14 @@ input[type="radio"]:checked + label span {
 .custom-scroll::-webkit-scrollbar-track {
   background-color: #d9d9d9;
 }
+
+.colors input[type="radio"]:checked + label span {
+  border: 1px solid red;
+  box-shadow: 0px 0px 0px 4px white inset;
+  
+}
+.size input[type="radio"]:checked + label span {
+  border: 1px solid #000;
+  color: #000;  
+  background-color: transparent;
+}
